Source/ISS/Development/SAIS/SAIS_Devices/Dmm_Ri4152A/Vendor/Include/ri4152a.h

ViStatus _VI_FUNC ri4152a_readStatusByte_Q(ViSession vi, ViPInt16 statusByte);
ViStatus _VI_FUNC ri4152a_func_Q  (ViSession vi, ViPInt16 func);
ViStatus _VI_FUNC ri4152a_initImm  (ViSession vi);
ViStatus _VI_FUNC ri4152a_inpImpAuto  (ViSession vi, ViBoolean inpImpAuto);
ViStatus _VI_FUNC ri4152a_inpImpAuto_Q  (ViSession vi, ViPBoolean inpImpAuto);
ViStatus _VI_FUNC ri4152a_measCurrAc_Q  (ViSession vi, ViPReal64 reading);
ViStatus _VI_FUNC ri4152a_measCurrDc_Q  (ViSession vi, ViPReal64 reading);
ViStatus _VI_FUNC ri4152a_measFreq_Q  (ViSession vi, ViPReal64 reading);
ViStatus _VI_FUNC ri4152a_measFres_Q  (ViSession vi, ViPReal64 reading);
ViStatus _VI_FUNC ri4152a_measPer_Q  (ViSession vi, ViPReal64 reading);
ViStatus _VI_FUNC ri4152a_measRes_Q  (ViSession vi, ViPReal64 reading);
ViStatus _VI_FUNC ri4152a_measVoltAc_Q  (ViSession vi, ViPReal64 reading);
ViStatus _VI_FUNC ri4152a_measVoltDcRat_Q  (ViSession vi, ViPReal64 reading);
ViStatus _VI_FUNC ri4152a_measVoltDc_Q  (ViSession vi, ViPReal64 reading);
ViStatus _VI_FUNC ri4152a_measure_Q  (ViSession vi, ViInt16 function, ViPReal64 reading);
ViStatus _VI_FUNC ri4152a_outpTtlt_M  (ViSession vi, ViInt16 ttltLine, ViBoolean ttltState);
ViStatus _VI_FUNC ri4152a_outpTtlt_M_Q  (ViSession vi, ViInt16 ttltLine, ViPBoolean ttltState);
ViStatus _VI_FUNC ri4152a_perAper  (ViSession vi, ViReal64 aperture);
ViStatus _VI_FUNC ri4152a_perAper_Q  (ViSession vi, ViPReal64 aperture);
ViStatus _VI_FUNC ri4152a_perVoltRang  (ViSession vi, ViBoolean autoRange, ViReal64 range);
ViStatus _VI_FUNC ri4152a_perVoltRang_Q  (ViSession vi, ViPBoolean autoRange, ViPReal64 range);
ViStatus _VI_FUNC ri4152a_read_Q  (ViSession vi, ViReal64 _VI_FAR readings[], ViPInt32 numReadings);
ViStatus _VI_FUNC ri4152a_resAper  (ViSession vi, ViReal64 aperture);
ViStatus _VI_FUNC ri4152a_resAper_Q  (ViSession vi, ViPReal64 aperture);
ViStatus _VI_FUNC ri4152a_resNplc  (ViSession vi, ViReal64 nplc);
ViStatus _VI_FUNC ri4152a_resNplc_Q  (ViSession vi, ViPReal64 nplc);
ViStatus _VI_FUNC ri4152a_resRang  (ViSession vi, ViBoolean autoRange, ViReal64 range);
ViStatus _VI_FUNC ri4152a_resRang_Q  (ViSession vi, ViPBoolean autoRange, ViPReal64 range);
ViStatus _VI_FUNC ri4152a_resRes  (ViSession vi, ViReal64 resolution);
ViStatus _VI_FUNC ri4152a_resRes_Q  (ViSession vi, ViPReal64 resolution);
ViStatus _VI_FUNC ri4152a_sampCoun  (ViSession vi, ViInt32 sampCoun);
ViStatus _VI_FUNC ri4152a_sampCoun_Q  (ViSession vi, ViPInt32 sampCoun);
ViStatus _VI_FUNC ri4152a_systLfr  (ViSession vi, ViInt16 systLfr);
ViStatus _VI_FUNC ri4152a_systLfr_Q  (ViSession vi, ViPInt16 systLfr);
ViStatus _VI_FUNC ri4152a_timedFetch_Q  (ViSession vi, ViInt32 timeOut, ViReal64 _VI_FAR readings[], ViPInt32 numReadings);
ViStatus _VI_FUNC ri4152a_trigCoun  (ViSession vi, ViInt32 trigCoun);
ViStatus _VI_FUNC ri4152a_trigCoun_Q  (ViSession vi, ViPInt32 trigCoun);
ViStatus _VI_FUNC ri4152a_trigDel  (ViSession vi, ViBoolean trigDelAuto, ViReal64 trigDel);
ViStatus _VI_FUNC ri4152a_trigDel_Q  (ViSession vi, ViPBoolean trigDelAuto, ViPReal64 trigDel);
ViStatus _VI_FUNC ri4152a_trigSour  (ViSession vi, ViInt16 trigSour);
ViStatus _VI_FUNC ri4152a_trigSour_Q  (ViSession vi, ViPInt16 trigSour);
ViStatus _VI_FUNC ri4152a_trigger  (ViSession vi, ViInt32 count, ViBoolean autoDelay, ViReal64 delay, ViInt16 source);
ViStatus _VI_FUNC ri4152a_trigger_Q  (ViSession vi, ViPInt32 count, ViPBoolean autoDelay, ViPReal64 delay, ViPInt16 trigSour);
ViStatus _VI_FUNC ri4152a_voltAcRang  (ViSession vi, ViBoolean autoRange, ViReal64 range);
ViStatus _VI_FUNC ri4152a_voltAcRang_Q  (ViSession vi, ViPBoolean autoRange, ViPReal64 range);
ViStatus _VI_FUNC ri4152a_voltAcRes  (ViSession vi, ViReal64 resolution);
ViStatus _VI_FUNC ri4152a_voltAcRes_Q  (ViSession vi, ViPReal64 resolution);
ViStatus _VI_FUNC ri4152a_voltDcAper  (ViSession vi, ViReal64 aperture);
ViStatus _VI_FUNC ri4152a_voltDcAper_Q  (ViSession vi, ViPReal64 aperture);
ViStatus _VI_FUNC ri4152a_voltDcNplc  (ViSession vi, ViReal64 nplc);
ViStatus _VI_FUNC ri4152a_voltDcNplc_Q  (ViSession vi, ViPReal64 nplc);
ViStatus _VI_FUNC ri4152a_voltDcRang  (ViSession vi, ViBoolean autoRange, ViReal64 range);
ViStatus _VI_FUNC ri4152a_voltDcRang_Q  (ViSession vi, ViPBoolean autoRange, ViPReal64 range);
ViStatus _VI_FUNC ri4152a_voltDcRes  (ViSession vi, ViReal64 resolution);
ViStatus _VI_FUNC ri4152a_voltDcRes_Q  (ViSession vi, ViPReal64 resolution);