Source/Core/Source/Drivers/DMM/include/ri4152a.bas


Declare Function ri4152a_func_Q Lib "ri4152a_32.dll" (ByVal vi As Long, func As Integer) As Long

Declare Function ri4152a_initImm Lib "ri4152a_32.dll" (ByVal vi As Long) As Long

Declare Function ri4152a_inpImpAuto Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal inpImpAuto As Integer) As Long

Declare Function ri4152a_inpImpAuto_Q Lib "ri4152a_32.dll" (ByVal vi As Long, inpImpAuto As Integer) As Long

Declare Function ri4152a_measCurrAc_Q Lib "ri4152a_32.dll" (ByVal vi As Long, reading As Double) As Long

Declare Function ri4152a_measCurrDc_Q Lib "ri4152a_32.dll" (ByVal vi As Long, reading As Double) As Long

Declare Function ri4152a_measFreq_Q Lib "ri4152a_32.dll" (ByVal vi As Long, reading As Double) As Long

Declare Function ri4152a_measFres_Q Lib "ri4152a_32.dll" (ByVal vi As Long, reading As Double) As Long

Declare Function ri4152a_measPer_Q Lib "ri4152a_32.dll" (ByVal vi As Long, reading As Double) As Long

Declare Function ri4152a_measRes_Q Lib "ri4152a_32.dll" (ByVal vi As Long, reading As Double) As Long

Declare Function ri4152a_measVoltAc_Q Lib "ri4152a_32.dll" (ByVal vi As Long, reading As Double) As Long

Declare Function ri4152a_measVoltDcRat_Q Lib "ri4152a_32.dll" (ByVal vi As Long, reading As Double) As Long

Declare Function ri4152a_measVoltDc_Q Lib "ri4152a_32.dll" (ByVal vi As Long, reading As Double) As Long

Declare Function ri4152a_measure_Q Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal func As Integer, reading As Double) As Long

Declare Function ri4152a_outpTtlt_M Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal ttltLine As Integer, ByVal ttltState As Integer) As Long

Declare Function ri4152a_outpTtlt_M_Q Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal ttltLine As Integer, ttltState As Integer) As Long

Declare Function ri4152a_perAper Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal aperture As Double) As Long

Declare Function ri4152a_perAper_Q Lib "ri4152a_32.dll" (ByVal vi As Long, aperture As Double) As Long

Declare Function ri4152a_perVoltRang Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal autoRange As Integer, ByVal range As Double) As Long

Declare Function ri4152a_perVoltRang_Q Lib "ri4152a_32.dll" (ByVal vi As Long, autoRange As Integer, range As Double) As Long

'Declare Function ri4152a_readStatusByte_Q Lib "ri4152a_32.dll" (ByVal vi As Long, statusByte As Integer) As Long

Declare Function ri4152a_read_Q Lib "ri4152a_32.dll" (ByVal vi As Long, readings As Double, numReadings As Long) As Long

Declare Function ri4152a_resAper Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal aperture As Double) As Long

Declare Function ri4152a_resAper_Q Lib "ri4152a_32.dll" (ByVal vi As Long, aperture As Double) As Long

Declare Function ri4152a_resNplc Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal nplc As Double) As Long

Declare Function ri4152a_resNplc_Q Lib "ri4152a_32.dll" (ByVal vi As Long, nplc As Double) As Long

Declare Function ri4152a_resRang Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal autoRange As Integer, ByVal range As Double) As Long

Declare Function ri4152a_resRang_Q Lib "ri4152a_32.dll" (ByVal vi As Long, autoRange As Integer, range As Double) As Long

Declare Function ri4152a_resRes Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal resolution As Double) As Long

Declare Function ri4152a_resRes_Q Lib "ri4152a_32.dll" (ByVal vi As Long, resolution As Double) As Long

Declare Function ri4152a_sampCoun Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal sampCoun As Long) As Long

Declare Function ri4152a_sampCoun_Q Lib "ri4152a_32.dll" (ByVal vi As Long, sampCoun As Long) As Long

Declare Function ri4152a_systLfr Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal systLfr As Integer) As Long

Declare Function ri4152a_systLfr_Q Lib "ri4152a_32.dll" (ByVal vi As Long, systLfr As Integer) As Long

Declare Function ri4152a_timedFetch_Q Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal timeOut As Long, readings As Double, numReadings As Long) As Long

Declare Function ri4152a_trigCoun Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal trigCoun As Long) As Long

Declare Function ri4152a_trigCoun_Q Lib "ri4152a_32.dll" (ByVal vi As Long, trigCoun As Long) As Long

Declare Function ri4152a_trigDel Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal trigDelAuto As Integer, ByVal trigDel As Double) As Long

Declare Function ri4152a_trigDel_Q Lib "ri4152a_32.dll" (ByVal vi As Long, autoDelay As Integer, delay As Double) As Long

Declare Function ri4152a_trigSour Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal trigSour As Integer) As Long

Declare Function ri4152a_trigSour_Q Lib "ri4152a_32.dll" (ByVal vi As Long, trigSour As Integer) As Long

Declare Function ri4152a_trigger Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal count As Long, ByVal autoDelay As Integer, ByVal delay As Double, ByVal source As Integer) As Long

Declare Function ri4152a_trigger_Q Lib "ri4152a_32.dll" (ByVal vi As Long, count As Long, autoDelay As Integer, delay As Double, source As Integer) As Long

Declare Function ri4152a_voltAcRang Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal autoRange As Integer, ByVal range As Double) As Long

Declare Function ri4152a_voltAcRang_Q Lib "ri4152a_32.dll" (ByVal vi As Long, autoRange As Integer, range As Double) As Long

Declare Function ri4152a_voltAcRes Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal resolution As Double) As Long

Declare Function ri4152a_voltAcRes_Q Lib "ri4152a_32.dll" (ByVal vi As Long, resolution As Double) As Long

Declare Function ri4152a_voltDcAper Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal aperture As Double) As Long

Declare Function ri4152a_voltDcAper_Q Lib "ri4152a_32.dll" (ByVal vi As Long, aperture As Double) As Long

Declare Function ri4152a_voltDcNplc Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal nplc As Double) As Long

Declare Function ri4152a_voltDcNplc_Q Lib "ri4152a_32.dll" (ByVal vi As Long, nplc As Double) As Long

Declare Function ri4152a_voltDcRang Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal autoRange As Integer, ByVal range As Double) As Long

Declare Function ri4152a_voltDcRang_Q Lib "ri4152a_32.dll" (ByVal vi As Long, autoRange As Integer, range As Double) As Long

Declare Function ri4152a_voltDcRes Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal resolution As Double) As Long

Declare Function ri4152a_voltDcRes_Q Lib "ri4152a_32.dll" (ByVal vi As Long, resolution As Double) As Long

